ajouts multi link + liens wikipedia

--- a/music/electro.html
+++ b/music/electro.html
@@ -33,7 +33,7 @@
             <h2>
                 L'électro ou EDM ( Electronic Dance Music )
             </h2>
-            <p>
+            <div class="paragraph">
                 L'électro ou musique électronique, est un style de musique entièrement composé pour danser et
                 principalement joué dans des boîtes de nuit, raves et festivals.
                 Cette variété est produite et jouée par des DJ (Disc Jockey).
@@ -50,15 +50,24 @@
                 Il est considéré comme l'un des meilleurs événements musicaux électroniques du monde avec Tomorrowland,
                 l'Amsterdam Music Festival,
                 l'Electric Daisy Carnival et le Coachella.
-            </p>
+            </div>
 
             <article id="electro">
-                <p>
+                
                     Voici ci-dessous quelques Dj les plus connus aujourd'hui:
-                </p>
-                <ul>
-                    <li>
-                        Avicii
+                
+                    <article id="Avicii">
+                        <div class="multi-link">
+                            <span>Avicii</span>
+                            <div>
+                                <a href="https://open.spotify.com/artist/1vCWHaC5f2uS3yhpwWbIA6" target="_blank"><img
+                                        class="spotify-icon" src="../images/icons/spotify.png" alt="spotify link" /></a>
+                                <a href=" https://fr.wikipedia.org/wiki/Avicii" target="_blank"><img class="wiki-icon"
+                                        src="../images/icons/wiki.png" alt="wikipedia link" /></a>
+                                <a href="https://www.youtube.com/user/aviciideo" target="_blank"><img class="yt-icon"
+                                        src="../images/icons/yt.png" alt="youtube link" /></a>
+                            </div>
+                        </div> 
                         <figure class="float-right bordered">
                             <img src="../images/avicii.png" alt="avicii" width="200" class="rounded-corners" />
                             <figcaption>
@@ -90,9 +99,20 @@
                                 </figcaption>
                             </figure>
                         </div>
-                    </li>
-                    <li>
-                        Martin Garrix
+                    </article>
+
+                    <article id="Martin Garrix">
+                        <div class="multi-link">
+                            <span>Martin Garrix</span>
+                            <div>
+                                <a href="https://open.spotify.com/artist/60d24wfXkVzDSfLS6hyCjZ" target="_blank"><img
+                                        class="spotify-icon" src="../images/icons/spotify.png" alt="spotify link" /></a>
+                                <a href="https://fr.wikipedia.org/wiki/Martin_Garrix" target="_blank"><img class="wiki-icon"
+                                        src="../images/icons/wiki.png" alt="wikipedia link" /></a>
+                                <a href=https://www.youtube.com/user/MartinGarrix" target="_blank"><img class="yt-icon"
+                                        src="../images/icons/yt.png" alt="youtube link" /></a>
+                            </div>
+                        </div> 
                         <figure class="float-right bordered">
                             <img src="../images/martingarrix.jpg" alt="Martin Garrix" width="200"
                                 class="rounded-corners" />
@@ -125,9 +145,20 @@
                                 </figcaption>
                             </figure>
                         </div>
-                    </li>
-                    <li>
-                        Tiësto
+                    </article>
+
+                    <article id="Tiësto">
+                        <div class="multi-link">
+                            <span>Tiësto</span>
+                            <div>
+                                <a href="https://open.spotify.com/artist/2o5jDhtHVPhrJdv3cEQ99Z" target="_blank"><img
+                                        class="spotify-icon" src="../images/icons/spotify.png" alt="spotify link" /></a>
+                                <a href="https://fr.wikipedia.org/wiki/Ti%C3%ABsto" target="_blank"><img class="wiki-icon"
+                                        src="../images/icons/wiki.png" alt="wikipedia link" /></a>
+                                <a href="https://www.youtube.com/user/officialtiestohttps://www.youtube.com/user/officialtiesto" target="_blank"><img class="yt-icon"
+                                        src="../images/icons/yt.png" alt="youtube link" /></a>
+                            </div>
+                        </div> 
                         <figure class="float-right bordered">
                             <img src="../images/tiesto.jpg" alt="" width="200" class="rounded-corners" />
                         </figure>
@@ -163,6 +194,5 @@
                                 </figcaption>
                             </figure>
                         </div>
-                    </li>
-                </ul>
+                    </article>
             </article>
