modif_overflow_integration

--- a/music/rap.html
+++ b/music/rap.html
@@ -86,7 +86,7 @@
                                         class="yt-icon" src="../images/icons/yt.png" alt="youtube link" /></a>
                             </div>
                         </div>
-                        <figure class="float-right bordered">
+                        <figure class="no-overflow">
                             <img src="../images/columbine.jpg" alt="logo columbine" width="200"
                                 class="rounded-corners" />
                             <figcaption>
@@ -115,6 +115,7 @@
                             </figcaption>
                         </figure>
                     </article>
+                    
                     <article id="Nekfeu">
                         <div class="multi-link">
                             <span>Nekfeu</span>
