youtube integration rock

--- a/music/rock.html
+++ b/music/rock.html
@@ -20,15 +20,15 @@
         </div>
     </header>
     <aside class="navbar">
-            <div>
-                <iframe src="../nav.html"></iframe>
-                <img class="mobile" src="../images/icons/mobileMenu.png" alt="menu" />
-                <img class="navbar-line computer" src="../images/ligne.png" alt="icon navbar" />
-                <img class="navbar-arrow computer" src="../images/fleche.png" alt="icon navbar" />
-            </div>
-            <div class="mobile dark-back"></div>
-        </aside>
-        <main>
+        <div>
+            <iframe src="../nav.html"></iframe>
+            <img class="mobile" src="../images/icons/mobileMenu.png" alt="menu" />
+            <img class="navbar-line computer" src="../images/ligne.png" alt="icon navbar" />
+            <img class="navbar-arrow computer" src="../images/fleche.png" alt="icon navbar" />
+        </div>
+        <div class="mobile dark-back"></div>
+    </aside>
+    <main>
         <section class="no-top-separator">
             <h2>
                 Le rock'n'roll
@@ -60,10 +60,16 @@
                         allow="encrypted-media"></iframe>
                 </div>
             </div>
-            <figure class="simple-yt">
-                <iframe class="yt-integration" src="https://www.youtube-nocookie.com/embed/ZgdufzXvjqw"
-                    allow="accelerometer; autoplay; encrypted-media; gyroscope; picture-in-picture"
-                    allowfullscreen></iframe>
+            <figure class="yt-integ">
+                <div>
+                    <div>
+                        <div>
+                            <iframe src="https://www.youtube-nocookie.com/embed/ZgdufzXvjqw"
+                                allow="accelerometer; autoplay; encrypted-media; gyroscope; picture-in-picture"
+                                allowfullscreen></iframe>
+                        </div>
+                    </div>
+                </div>
                 <figcaption>
                     Rock Around The Clock de Bill Halley (1955)
                 </figcaption>
@@ -100,7 +106,7 @@
                 </h3>
                 <figure class="float-right bordered">
                     <img src="https://upload.wikimedia.org/wikipedia/commons/2/2d/PresleyPromo1954PhotoOnly.jpg?1572343947313"
-                        alt="Elvis Presley" height="130" class="rounded-corners" />
+                        alt="Elvis Presley" height="125" class="rounded-corners" />
                     <figcaption>
                         Elvis Presley
                     </figcaption>
@@ -163,14 +169,22 @@
                             allow="encrypted-media"></iframe>
                     </div>
                 </div>
-                <figure class="double-yt">
+                <figure class="yt-integ">
                     <div>
-                        <iframe class="yt-integration" src="https://www.youtube-nocookie.com/embed/T38v3-SSGcM"
-                            allow="accelerometer; autoplay; encrypted-media; gyroscope; picture-in-picture"
-                            allowfullscreen></iframe>
-                        <iframe class="yt-integration" src="https://www.youtube-nocookie.com/embed/MrOsHfZsVLk"
-                            allow="accelerometer; autoplay; encrypted-media; gyroscope; picture-in-picture"
-                            allowfullscreen></iframe>
+                        <div>
+                            <div>
+                                <iframe src="https://www.youtube-nocookie.com/embed/T38v3-SSGcM"
+                                    allow="accelerometer; autoplay; encrypted-media; gyroscope; picture-in-picture"
+                                    allowfullscreen></iframe>
+                            </div>
+                        </div>
+                        <div>
+                            <div>
+                                <iframe src="https://www.youtube-nocookie.com/embed/MrOsHfZsVLk"
+                                    allow="accelerometer; autoplay; encrypted-media; gyroscope; picture-in-picture"
+                                    allowfullscreen></iframe>
+                            </div>
+                        </div>
                     </div>
                     <figcaption>
                         Deux titres de rockabilly : Johnny B. Goode de Chuck Berry (1957) et Everybody Needs Somebody
@@ -251,14 +265,22 @@
                             allow="encrypted-media"></iframe>
                     </div>
                 </div>
-                <figure class="double-yt">
+                <figure class="yt-integ">
                     <div>
-                        <iframe class="yt-integration" src="https://www.youtube-nocookie.com/embed/YR5ApYxkU-U"
-                            allow="accelerometer; autoplay; encrypted-media; gyroscope; picture-in-picture"
-                            allowfullscreen></iframe>
-                        <iframe class="yt-integration" src="https://www.youtube-nocookie.com/embed/pSn-qsFyj7E"
-                            allow="accelerometer; autoplay; encrypted-media; gyroscope; picture-in-picture"
-                            allowfullscreen></iframe>
+                        <div>
+                            <div>
+                                <iframe src="https://www.youtube-nocookie.com/embed/YR5ApYxkU-U"
+                                    allow="accelerometer; autoplay; encrypted-media; gyroscope; picture-in-picture"
+                                    allowfullscreen></iframe>
+                            </div>
+                        </div>
+                        <div>
+                            <div>
+                                <iframe src="https://www.youtube-nocookie.com/embed/pSn-qsFyj7E"
+                                    allow="accelerometer; autoplay; encrypted-media; gyroscope; picture-in-picture"
+                                    allowfullscreen></iframe>
+                            </div>
+                        </div>
                     </div>
                     <figcaption>
                         Deux titres : Another Brick In The Wall des Pink Floyd (1986) et The Ancient (Giants under the
@@ -270,7 +292,7 @@
             <article id="hard">
                 <figure class="float-right bordered computer">
                     <img src="https://upload.wikimedia.org/wikipedia/commons/8/88/Helmfrid-sofa4_Touched.JPG"
-                        alt="Phonographe" width="150" class="rounded-corners" />
+                        alt="Phonographe" width="145" class="rounded-corners" />
                     <figcaption>
                         The Kinks
                     </figcaption>
@@ -360,14 +382,22 @@
                             allow="encrypted-media"></iframe>
                     </div>
                 </div>
-                <figure class="double-yt">
+                <figure class="yt-integ">
                     <div>
-                        <iframe class="yt-integration" src="https://www.youtube-nocookie.com/embed/pAgnJDJN4VA"
-                            allow="accelerometer; autoplay; encrypted-media; gyroscope; picture-in-picture"
-                            allowfullscreen></iframe>
-                        <iframe class="yt-integration" src="https://www.youtube-nocookie.com/embed/QkF3oxziUI4"
-                            allow="accelerometer; autoplay; encrypted-media; gyroscope; picture-in-picture"
-                            allowfullscreen></iframe>
+                        <div>
+                            <div>
+                                <iframe src="https://www.youtube-nocookie.com/embed/pAgnJDJN4VA"
+                                    allow="accelerometer; autoplay; encrypted-media; gyroscope; picture-in-picture"
+                                    allowfullscreen></iframe>
+                            </div>
+                        </div>
+                        <div>
+                            <div>
+                                <iframe src="https://www.youtube-nocookie.com/embed/QkF3oxziUI4"
+                                    allow="accelerometer; autoplay; encrypted-media; gyroscope; picture-in-picture"
+                                    allowfullscreen></iframe>
+                            </div>
+                        </div>
                     </div>
                     <figcaption>
                         Back In Black de AC/DC (1980) et Stairway to Heaven de Led Zeppelin (1971)
@@ -428,14 +458,22 @@
                             allow="encrypted-media"></iframe>
                     </div>
                 </div>
-                <figure class="double-yt">
+                <figure class="yt-integ">
                     <div>
-                        <iframe class="yt-integration" src="https://www.youtube-nocookie.com/embed/r00ikilDxW4"
-                            allow="accelerometer; autoplay; encrypted-media; gyroscope; picture-in-picture"
-                            allowfullscreen></iframe>
-                        <iframe class="yt-integration" src="https://www.youtube-nocookie.com/embed/ql9-82oV2JE"
-                            allow="accelerometer; autoplay; encrypted-media; gyroscope; picture-in-picture"
-                            allowfullscreen></iframe>
+                        <div>
+                            <div>
+                                <iframe src="https://www.youtube-nocookie.com/embed/r00ikilDxW4"
+                                    allow="accelerometer; autoplay; encrypted-media; gyroscope; picture-in-picture"
+                                    allowfullscreen></iframe>
+                            </div>
+                        </div>
+                        <div>
+                            <div>
+                                <iframe src="https://www.youtube-nocookie.com/embed/ql9-82oV2JE"
+                                    allow="accelerometer; autoplay; encrypted-media; gyroscope; picture-in-picture"
+                                    allowfullscreen></iframe>
+                            </div>
+                        </div>
                     </div>
                     <figcaption>
                         Deux titres de punk rock : 21 Guns de Green Day (2009) et You're Gonna Go Far Kid de The
@@ -466,11 +504,15 @@
                             allow="encrypted-media"></iframe>
                     </div>
                 </div>
-                <figure class="simple-yt">
+                <figure class="yt-integ">
                     <div>
-                        <iframe class="yt-integration" src="https://www.youtube-nocookie.com/embed/hTWKbfoikeg"
-                            allow="accelerometer; autoplay; encrypted-media; gyroscope; picture-in-picture"
-                            allowfullscreen></iframe>
+                        <div>
+                            <div>
+                                <iframe src="https://www.youtube-nocookie.com/embed/hTWKbfoikeg"
+                                    allow="accelerometer; autoplay; encrypted-media; gyroscope; picture-in-picture"
+                                    allowfullscreen></iframe>
+                            </div>
+                        </div>
                     </div>
                     <figcaption>
                         Smells Like Teen Spirit de
@@ -571,34 +613,37 @@
                         <iframe src="https://open.spotify.com/embed/track/7EZC6E7UjZe63f1jRmkWxt"
                             allow="encrypted-media"></iframe>
                     </div>
-                </div>
-                <figure class="double-yt">
-                    <div>
-                        <iframe class="yt-integration" src="https://www.youtube-nocookie.com/embed/YlUKcNNmywk"
-                            allow="accelerometer; autoplay; encrypted-media; gyroscope; picture-in-picture"
-                            allowfullscreen></iframe>
-                        <iframe class="yt-integration" src="https://www.youtube-nocookie.com/embed/6Ejga4kJUts"
-                            allow="accelerometer; autoplay; encrypted-media; gyroscope; picture-in-picture"
-                            allowfullscreen></iframe>
-                    </div>
-                    <figcaption>
-                        Californication des Red Hot Chili Peppers (1999) et Zombie des Cranberries (1993)
-                    </figcaption>
-                </figure>
-                <div class="spotify-integ">
                     <div>
                         <iframe src="https://open.spotify.com/embed/track/04aAxqtGp5pv12UXAg4pkq"
                             allow="encrypted-media"></iframe>
                     </div>
                 </div>
-                <figure class="simple-yt">
+                <figure class="yt-integ">
                     <div>
-                        <iframe class="yt-integration" src="https://www.youtube-nocookie.com/embed/LBr7kECsjcQ"
-                            allow="accelerometer; autoplay; encrypted-media; gyroscope; picture-in-picture"
-                            allowfullscreen></iframe>
+                        <div>
+                            <div>
+                                <iframe class="yt-integration" src="https://www.youtube-nocookie.com/embed/YlUKcNNmywk"
+                                    allow="accelerometer; autoplay; encrypted-media; gyroscope; picture-in-picture"
+                                    allowfullscreen></iframe>
+                            </div>
+                        </div>
+                        <div>
+                            <div>
+                                <iframe class="yt-integration" src="https://www.youtube-nocookie.com/embed/6Ejga4kJUts"
+                                    allow="accelerometer; autoplay; encrypted-media; gyroscope; picture-in-picture"
+                                    allowfullscreen></iframe>
+                            </div>
+                        </div>
+                        <div>
+                                <div>
+                                    <iframe class="yt-integration" src="https://www.youtube-nocookie.com/embed/LBr7kECsjcQ"
+                                        allow="accelerometer; autoplay; encrypted-media; gyroscope; picture-in-picture"
+                                        allowfullscreen></iframe>
+                                </div>
+                            </div>
                     </div>
                     <figcaption>
-                        Centuries de Fall Out Boy (2015)
+                        Californication des Red Hot Chili Peppers (1999), Zombie des Cranberries (1993) et Centuries de Fall Out Boy (2015)
                     </figcaption>
                 </figure>
                 <span class="button"><a href="#">Retour en haut de la page !</a></span>
