youtube integration metal

--- a/music/metal.html
+++ b/music/metal.html
@@ -164,18 +164,25 @@
                         allow="encrypted-media"></iframe>
                 </div>
             </div>
-            <figure class="double-yt">
+            <figure class="yt-integ">
                 <div>
-                    <iframe class="yt-integration" src="https://www.youtube-nocookie.com/embed/EhGEGIBGLu8"
-                        allow="accelerometer; autoplay; encrypted-media; gyroscope; picture-in-picture"
-                        allowfullscreen></iframe>
-                    <iframe class="yt-integration" src="https://www.youtube-nocookie.com/embed/86URGgqONvA"
-                        allow="accelerometer; autoplay; encrypted-media; gyroscope; picture-in-picture"
-                        allowfullscreen></iframe>
-                </div>
-                <figcaption>
-                    Deux titres de heavy metal, Holy Diver de Dio (1983) et Run to the Hills de Iron Maiden (1982)
-                </figcaption>
+                    <div>
+                        <div>
+                            <iframe src="https://www.youtube-nocookie.com/embed/EhGEGIBGLu8"
+                                allow="accelerometer; autoplay; encrypted-media; gyroscope; picture-in-picture"
+                                allowfullscreen></iframe>
+                        </div>
+                    </div>
+                    <div>
+                        <div>
+                            <iframe src="https://www.youtube-nocookie.com/embed/86URGgqONvA"
+                                allow="accelerometer; autoplay; encrypted-media; gyroscope; picture-in-picture"
+                                allowfullscreen></iframe>
+                        </div>
+                        <figcaption>
+                            Deux titres de heavy metal, Holy Diver de Dio (1983) et Run to the Hills de Iron Maiden
+                            (1982)
+                        </figcaption>
             </figure>
             <span class="button"><a href="#">Retour en haut de la page !</a></span>
         </section>
@@ -279,18 +286,25 @@
                         allow="encrypted-media"></iframe>
                 </div>
             </div>
-            <figure class="double-yt">
+            <figure class="yt-integ">
                 <div>
-                    <iframe class="yt-integration" src="https://www.youtube-nocookie.com/embed/xnKhsTXoKCI"
-                        allow="accelerometer; autoplay; encrypted-media; gyroscope; picture-in-picture"
-                        allowfullscreen></iframe>
-                    <iframe class="yt-integration" src="https://www.youtube-nocookie.com/embed/z8ZqFlw6hYg"
-                        allow="accelerometer; autoplay; encrypted-media; gyroscope; picture-in-picture"
-                        allowfullscreen></iframe>
-                </div>
-                <figcaption>
-                    Deux titres de thrash metal, Master of Puppets de Metallica (1986) et Raining Blood de Slayer (1986)
-                </figcaption>
+                    <div>
+                        <div>
+                            <iframe src="https://www.youtube-nocookie.com/embed/xnKhsTXoKCI"
+                                allow="accelerometer; autoplay; encrypted-media; gyroscope; picture-in-picture"
+                                allowfullscreen></iframe>
+                        </div>
+                    </div>
+                    <div>
+                        <div>
+                            <iframe src="https://www.youtube-nocookie.com/embed/z8ZqFlw6hYg"
+                                allow="accelerometer; autoplay; encrypted-media; gyroscope; picture-in-picture"
+                                allowfullscreen></iframe>
+                        </div>
+                        <figcaption>
+                            Deux titres de thrash metal, Master of Puppets de Metallica (1986) et Raining Blood de
+                            Slayer (1986)
+                        </figcaption>
             </figure>
             <span class="button"><a href="#">Retour en haut de la page !</a></span>
         </section>
@@ -358,14 +372,22 @@
                         allow="encrypted-media"></iframe>
                 </div>
             </div>
-            <figure class="double-yt">
+            <figure class="yt-integ">
                 <div>
-                    <iframe class="yt-integration" src="https://www.youtube-nocookie.com/embed/QIf2GgA1rGc"
-                        allow="accelerometer; autoplay; encrypted-media; gyroscope; picture-in-picture"
-                        allowfullscreen></iframe>
-                    <iframe class="yt-integration" src="https://www.youtube-nocookie.com/embed/z8VIhIIq-kk"
-                        allow="accelerometer; autoplay; encrypted-media; gyroscope; picture-in-picture"
-                        allowfullscreen></iframe>
+                    <div>
+                        <div>
+                            <iframe src="https://www.youtube-nocookie.com/embed/QIf2GgA1rGc"
+                                allow="accelerometer; autoplay; encrypted-media; gyroscope; picture-in-picture"
+                                allowfullscreen></iframe>
+                        </div>
+                    </div>
+                    <div>
+                        <div>
+                            <iframe src="https://www.youtube-nocookie.com/embed/z8VIhIIq-kk"
+                                allow="accelerometer; autoplay; encrypted-media; gyroscope; picture-in-picture"
+                                allowfullscreen></iframe>
+                        </div>
+                    </div>
                 </div>
                 <figcaption>
                     Deux titres de black metal, Quintessence de Darkthrone (1995) et Freezing Moon de Mayhem (1994)
@@ -437,14 +459,22 @@
                         allow="encrypted-media"></iframe>
                 </div>
             </div>
-            <figure class="double-yt">
+            <figure class="yt-integ">
                 <div>
-                    <iframe class="yt-integration" src="https://www.youtube-nocookie.com/embed/RqzZmNqdWck"
-                        allow="accelerometer; autoplay; encrypted-media; gyroscope; picture-in-picture"
-                        allowfullscreen></iframe>
-                    <iframe class="yt-integration" src="https://www.youtube-nocookie.com/embed/BGHlZwMYO9g"
-                        allow="accelerometer; autoplay; encrypted-media; gyroscope; picture-in-picture"
-                        allowfullscreen></iframe>
+                    <div>
+                        <div>
+                            <iframe src="https://www.youtube-nocookie.com/embed/RqzZmNqdWck"
+                                allow="accelerometer; autoplay; encrypted-media; gyroscope; picture-in-picture"
+                                allowfullscreen></iframe>
+                        </div>
+                    </div>
+                    <div>
+                        <div>
+                            <iframe src="https://www.youtube-nocookie.com/embed/BGHlZwMYO9g"
+                                allow="accelerometer; autoplay; encrypted-media; gyroscope; picture-in-picture"
+                                allowfullscreen></iframe>
+                        </div>
+                    </div>
                 </div>
                 <figcaption>
                     Deux titres de death metal, Shall Rise/Shall Be Dead de George Kollias, un batteur peu connu dont la
@@ -522,14 +552,22 @@
                         allow="encrypted-media"></iframe>
                 </div>
             </div>
-            <figure class="double-yt">
+            <figure class="yt-integ">
                 <div>
-                    <iframe class="yt-integration" src="https://www.youtube-nocookie.com/embed/0jgrCKhxE1s"
-                        allow="accelerometer; autoplay; encrypted-media; gyroscope; picture-in-picture"
-                        allowfullscreen></iframe>
-                    <iframe class="yt-integration" src="https://www.youtube-nocookie.com/embed/GpxFUo7oxWM"
-                        allow="accelerometer; autoplay; encrypted-media; gyroscope; picture-in-picture"
-                        allowfullscreen></iframe>
+                    <div>
+                        <div>
+                            <iframe src="https://www.youtube-nocookie.com/embed/0jgrCKhxE1s"
+                                allow="accelerometer; autoplay; encrypted-media; gyroscope; picture-in-picture"
+                                allowfullscreen></iframe>
+                        </div>
+                    </div>
+                    <div>
+                        <div>
+                            <iframe src="https://www.youtube-nocookie.com/embed/GpxFUo7oxWM"
+                                allow="accelerometer; autoplay; encrypted-media; gyroscope; picture-in-picture"
+                                allowfullscreen></iframe>
+                        </div>
+                    </div>
                 </div>
                 <figcaption>
                     Deux titres de power metal, Through The Fire And Flames de DragonForce (2005) et We Drink Your Blood
@@ -606,14 +644,22 @@
                         allow="encrypted-media"></iframe>
                 </div>
             </div>
-            <figure class="double-yt">
+            <figure class="yt-integ">
                 <div>
-                    <iframe class="yt-integration" src="https://www.youtube-nocookie.com/embed/iijKLHCQw5o"
-                        allow="accelerometer; autoplay; encrypted-media; gyroscope; picture-in-picture"
-                        allowfullscreen></iframe>
-                    <iframe class="yt-integration" src="https://www.youtube-nocookie.com/embed/ta-Z_psXODw"
-                        allow="accelerometer; autoplay; encrypted-media; gyroscope; picture-in-picture"
-                        allowfullscreen></iframe>
+                    <div>
+                        <div>
+                            <iframe src="https://www.youtube-nocookie.com/embed/iijKLHCQw5o"
+                                allow="accelerometer; autoplay; encrypted-media; gyroscope; picture-in-picture"
+                                allowfullscreen></iframe>
+                        </div>
+                    </div>
+                    <div>
+                        <div>
+                            <iframe src="https://www.youtube-nocookie.com/embed/ta-Z_psXODw"
+                                allow="accelerometer; autoplay; encrypted-media; gyroscope; picture-in-picture"
+                                allowfullscreen></iframe>
+                        </div>
+                    </div>
                 </div>
                 <figcaption>
                     Deux titres de folk metal, reprise Inis Mona de Eluveitie (2008) et Keelhauled de Alestorm (2009)
@@ -694,14 +740,22 @@
                         allow="encrypted-media"></iframe>
                 </div>
             </div>
-            <figure class="double-yt">
+            <figure class="yt-integ">
                 <div>
-                    <iframe class="yt-integration" src="https://www.youtube-nocookie.com/embed/MTHBEbivfZI"
-                        allow="accelerometer; autoplay; encrypted-media; gyroscope; picture-in-picture"
-                        allowfullscreen></iframe>
-                    <iframe class="yt-integration" src="https://www.youtube-nocookie.com/embed/jVywqkytzQc"
-                        allow="accelerometer; autoplay; encrypted-media; gyroscope; picture-in-picture"
-                        allowfullscreen></iframe>
+                    <div>
+                        <div>
+                            <iframe src="https://www.youtube-nocookie.com/embed/MTHBEbivfZI"
+                                allow="accelerometer; autoplay; encrypted-media; gyroscope; picture-in-picture"
+                                allowfullscreen></iframe>
+                        </div>
+                    </div>
+                    <div>
+                        <div>
+                            <iframe src="https://www.youtube-nocookie.com/embed/jVywqkytzQc"
+                                allow="accelerometer; autoplay; encrypted-media; gyroscope; picture-in-picture"
+                                allowfullscreen></iframe>
+                        </div>
+                    </div>
                 </div>
                 <figcaption>
                     Deux titres de doom metal, Black Sabbath de Black Sabbath (1970) et The Dead Leaf Echo de Novembers
@@ -774,14 +828,22 @@
                         allow="encrypted-media"></iframe>
                 </div>
             </div>
-            <figure class="double-yt">
+            <figure class="yt-integ">
                 <div>
-                    <iframe class="yt-integration" src="https://www.youtube-nocookie.com/embed/CSvFpBOe8eY"
-                        allow="accelerometer; autoplay; encrypted-media; gyroscope; picture-in-picture"
-                        allowfullscreen></iframe>
-                    <iframe class="yt-integration" src="https://www.youtube-nocookie.com/embed/CSJXle3LP_Q"
-                        allow="accelerometer; autoplay; encrypted-media; gyroscope; picture-in-picture"
-                        allowfullscreen></iframe>
+                    <div>
+                        <div>
+                            <iframe src="https://www.youtube-nocookie.com/embed/CSvFpBOe8eY"
+                                allow="accelerometer; autoplay; encrypted-media; gyroscope; picture-in-picture"
+                                allowfullscreen></iframe>
+                        </div>
+                    </div>
+                    <div>
+                        <div>
+                            <iframe src="https://www.youtube-nocookie.com/embed/CSJXle3LP_Q"
+                                allow="accelerometer; autoplay; encrypted-media; gyroscope; picture-in-picture"
+                                allowfullscreen></iframe>
+                        </div>
+                    </div>
                 </div>
                 <figcaption>
                     Deux titres de metal alternatif, Chop Suey! de SOAD (2001) -qui atteind bientôt 1Md de vues- et
@@ -861,14 +923,22 @@
                         allow="encrypted-media"></iframe>
                 </div>
             </div>
-            <figure class="double-yt">
+            <figure class="yt-integ">
                 <div>
-                    <iframe class="yt-integration" src="https://www.youtube-nocookie.com/embed/0ySpk3ErFd0"
-                        allow="accelerometer; autoplay; encrypted-media; gyroscope; picture-in-picture"
-                        allowfullscreen></iframe>
-                    <iframe class="yt-integration" src="https://www.youtube-nocookie.com/embed/HL9kaJZw8iw"
-                        allow="accelerometer; autoplay; encrypted-media; gyroscope; picture-in-picture"
-                        allowfullscreen></iframe>
+                    <div>
+                        <div>
+                            <iframe src="https://www.youtube-nocookie.com/embed/0ySpk3ErFd0"
+                                allow="accelerometer; autoplay; encrypted-media; gyroscope; picture-in-picture"
+                                allowfullscreen></iframe>
+                        </div>
+                    </div>
+                    <div>
+                        <div>
+                            <iframe src="https://www.youtube-nocookie.com/embed/HL9kaJZw8iw"
+                                allow="accelerometer; autoplay; encrypted-media; gyroscope; picture-in-picture"
+                                allowfullscreen></iframe>
+                        </div>
+                    </div>
                 </div>
                 <figcaption>
                     Deux titres de groove metal, Coulds Over California de DevilDriver (2007) et Laid to Rest de Lamb of
@@ -913,10 +983,7 @@
                         <a href="https://www.youtube.com/channel/UC7-YMmnc0ppcWmio8t1WdcA" target="_blank"><img
                                 class="yt-icon" src="../images/icons/yt.png" alt="youtube link" /></a>
                     </div>
-                </div>
-                , connu
-                pour être un groupe
-                engagé dans la politique ; et beaucoup, Beaucoup d'autres.
+                </div>, connu pour être un groupe engagé dans la politique ; et beaucoup, Beaucoup d'autres.
             </div>
             <p>
                 Le metal ne se caractérise pas que à l'auditif, mais aussi au visuel. L'image donné par les groupes est
