--- a/music/metal.html
+++ b/music/metal.html
@@ -179,10 +179,12 @@
                                 allow="accelerometer; autoplay; encrypted-media; gyroscope; picture-in-picture"
                                 allowfullscreen></iframe>
                         </div>
-                        <figcaption>
-                            Deux titres de heavy metal, Holy Diver de Dio (1983) et Run to the Hills de Iron Maiden
-                            (1982)
-                        </figcaption>
+                    </div>
+                </div>
+                <figcaption>
+                    Deux titres de heavy metal, Holy Diver de Dio (1983) et Run to the Hills de Iron Maiden
+                    (1982)
+                </figcaption>
             </figure>
             <span class="button"><a href="#">Retour en haut de la page !</a></span>
         </section>
@@ -301,10 +303,12 @@
                                 allow="accelerometer; autoplay; encrypted-media; gyroscope; picture-in-picture"
                                 allowfullscreen></iframe>
                         </div>
-                        <figcaption>
-                            Deux titres de thrash metal, Master of Puppets de Metallica (1986) et Raining Blood de
-                            Slayer (1986)
-                        </figcaption>
+                    </div>
+                </div>
+                <figcaption>
+                    Deux titres de thrash metal, Master of Puppets de Metallica (1986) et Raining Blood de
+                    Slayer (1986)
+                </figcaption>
             </figure>
             <span class="button"><a href="#">Retour en haut de la page !</a></span>
         </section>
